2000-07-28  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_proto.c (transmit): Add some parens.
	(peer_xmit): Add ntohl when grabbing sndauto.seq for broadcast.
	* ntpd/ntp_peer.c (findpeer): Cleanup
	* ntpd/ntp_loopfilter.c (local_clock): Typo
	From Dave Mills

	* include/ntp_config.h: Created

	* util/ntp-genkeys.c: Always build, but realize we may not have
	RSAREF.  Compile parts appropriately.

	* util/Makefile.am (bin_PROGRAMS): Always make ntp-genkeys
	(ntp-genkeys_LDADD): Use $LIBRSAREF instead of the "real path"
	* configure.in: Lose MAKE_NTP_GENKEYS

	* configure.in: 
	* util/ntp-genkeys.c: 
	* util/Makefile.am:
	Renamed ntp_genkeys to ntp-genkeys.

2000-07-27  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpdate/ntpdate.c (ntpdatemain): Cleanup error message.

	* ntpdate/ntpdate.c (ntpdatemain): Add missing authtrust() call
	From: Jason Heiss <jheiss@cruzeiro.ugcs.caltech.edu>

	* ntpd/refclock_ulink.c (ulink_receive): 
	* ntpd/ntp_crypto.c: 
	* libntp/authparity.c: 
	Lint/noise cleanup
	From: Marc Brett <mbrett@rgs0.london.waii.com>

	* ntpd/ntp_proto.c: Specifically track manycastserver and
	survivors
	From: Dave Mills

2000-07-26  Sven Dietrich  <sven_dietrich@trimble.com>

	* ntpd/ntpd.c: remove WINNT priority adjustment to the ports/winnt area
	where it does not clutter up the main distribution.

2000-07-24  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_proto.c (receive): dstadr_sin needs  higher visibility
	From: Dave Mills

	* flock-build: Added baldwin

	* ntpd/ntp_request.c: 
	* ntpd/ntp_proto.c: 
	* ntpd/ntp_peer.c: 
	* ntpd/ntp_io.c: 
	* ntpd/ntp_intres.c: 
	* ntpd/ntp_crypto.c (make_keylist): 
	* ntpd/ntp_control.c: 
	* ntpd/ntp_config.c (CONF_MOD_IBURST, save_resolve): 
	* include/ntpd.h (findpeerbyassoc, newpeer, peer_config, *_interface): 
	* include/ntp_request.h (CONF_FLAG_IBURST): 
	* include/ntp_crypto.h (crypto_xmit, make_keylist): 
	* include/ntp.h (FLAG_IBURST): 
	* html/release.htm: 
	* html/confopt.htm: 
	* html/assoc.htm: 